--- a/public/index.html
+++ b/public/index.html
@@ -563,10 +563,10 @@
 </div>
 
 <ul>
-<li>🏆 <strong>Best Credit Card Reviews</strong> - Find cards that maximize your rewards</li>
-<li>💰 <strong>Investment Strategies</strong> - Build long-term wealth with proven methods</li>
-<li>🛡️ <strong>Financial Planning</strong> - Emergency funds, budgeting, and goal setting</li>
-<li>📊 <strong>Market Analysis</strong> - Stay updated with the latest financial trends</li>
+<li><strong>Best Credit Card Reviews</strong> - Find cards that maximize your rewards</li>
+<li><strong>Investment Strategies</strong> - Build long-term wealth with proven methods</li>
+<li><strong>Financial Planning</strong> - Emergency funds, budgeting, and goal setting</li>
+<li><strong>Market Analysis</strong> - Stay updated with the latest financial trends</li>
 </ul>
 <hr>
 
